--- a/home/package.json
+++ b/home/package.json
@@ -1,6 +1,7 @@
 {
   "name": "home",
   "version": "1.0.0",
+  "main": "./src/index.tsx",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack serve --config webpack/webpack.dev.js",
@@ -21,8 +22,8 @@
     "@babel/preset-typescript": "^7.13.0",
     "@types/node": "^14.14.41",
     "@types/react": "^17.0.3",
-    "@types/react-dom": "^17.0.3",
     "@types/react-router-dom": "^5.1.7",
+    "@types/react-dom": "^17.0.3",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.0",
